src/styles/sections.style.css
@layer sections {
  .paragraph-line {
    @apply text-nowrap overflow-hidden;
  }

  .hero-container {
    @apply relative bg-warm-sunrise w-screen h-dvh overflow-hidden;

    .hero-content {
      @apply absolute w-full top-1/2 left-1/2 -translate-x-1/2 translate-y-0 z-10 flex flex-col items-center;

      .hero-title {
        @apply text-deep-navy 2xl:text-[8.5rem] md:text-[6.5rem] text-[3.3rem] font-bold uppercase leading-[9vw] tracking-[-0.35vw];
      }

      .hero-text-scroll {
        @apply -rotate-3 mb-8 border-[0.5vw] border-warm-sunrise;

        .hero-subtitle {
          @apply bg-golden-mango;
        }

        h1 {
          @apply uppercase 2xl:text-[8.5rem] md:text-[6.5rem] text-[3.3rem] text-[#fce1cd] leading-[9vw] tracking-[-0.35vw] 2xl:px-[1.2vw] px-3 2xl:pb-[1vw] pb-5 2xl:py-0;
        }
      }

      h2 {
        @apply font-paragraph text-deep-navy text-center md:max-w-lg max-w-sm px-5 text-sm leading-[115%];
      }

      .hero-button {
        @apply md:mt-11 mt-10 text-deep-navy bg-mango-burst uppercase font-bold text-sm rounded-full md:p-3.5 p-3 md:px-12 px-10 cursor-pointer;
      }
    }
  }

  .message-content {
    @apply relative z-20 bg-dark-ember text-warm-sunrise min-h-dvh overflow-hidden flex justify-center items-center;

    .message-wrapper {
      @apply 2xl:text-[8.5rem] xl:text-[6.4rem] md:text-8xl text-5xl font-bold uppercase leading-[9vw] tracking-[-0.35vw] flex flex-col justify-center items-center md:gap-20 gap-12;

      h1:first-of-type {
        @apply 2xl:max-w-4xl md:max-w-2xl max-w-xs text-center text-warm-sunrise/10;
      }

      h1:last-of-type {
        @apply 2xl:max-w-7xl md:max-w-4xl max-w-xs text-center text-warm-sunrise/10;
      }
    }

    p {
      @apply text-center font-paragraph;
    }

    h1,
    h2 {
      @apply leading-none;
    }

    .message-text-scroll {
      @apply rotate-3 xl:-translate-y-10 lg:translate-y-0 md:-translate-y-8 sm:-translate-y-5 -translate-y-10  absolute z-10 border-[0.5vw] border-dark-ember;
    }
  }

  .flavor-section {
    @apply min-h-dvh bg-warm-sunrise;
    
    .falvor-text-scroll {
      @apply absolute z-10 -rotate-3 md:translate-y-5 border-[0.5vw] border-warm-sunrise;
    }

    .first-text-split h1 {
      @apply md:text-center text-deep-navy;
    }

    .second-text-split h1 {
      @apply md:text-center;
    }

    .slider-wrapper {
      @apply lg:h-dvh min-h-dvh md:min-h-fit w-full xl:mt-0 md:mt-20 mt-0;

      .flavors {
        @apply h-full w-full flex md:flex-row flex-col flex-nowrap items-center 2xl:gap-72 lg:gap-52 md:gap-24 gap-7;

        .drinks {
          @apply absolute left-1/2 -translate-x-1/2 bottom-0 md:h-full h-80;
        }

        .elements {
          @apply absolute md:top-0 md:bottom-auto bottom-10 w-full;
        }

        h1 {
          @apply absolute md:bottom-10 md:left-10 left-5 text-warm-sunrise md:text-6xl text-3xl font-semibold uppercase tracking-tighter; 
        }
      }
    }
  }
}

